--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         
         <div id="sidebar" class="menubar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
-            <a href="https://github.com/emina-fajic/project1/blob/master/About.html">About</a>
+            [a relative link](About.html)>About</a>
             <a href="#">All Recipes</a>
             <a href="file:///D:/4TH%20YEAR/Web%20Application%20Development-Emina%20Faji%C4%87/Project1/Soups.html">Soups</a>
             <a href="file:///D:/4TH%20YEAR/Web%20Application%20Development-Emina%20Faji%C4%87/Project1/Pies%20and%20Pastries.html">Pies and Pastries</a>
