--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
             <a href="/../project1/About.html">About</a>
             <a href="#">All Recipes</a>
-            <a href="https://emina-fajic.github.io/../project1/Soups.html">Soups</a>
+            <a href="/../project1/Soups.html">Soups</a>
             <a href="/../project1/Pies and Pastries.html">Pies and Pastries</a>
             <a href="#">Main Dishes</a>
             <a href="#">Salads and side dishes</a>
