--- a/Chocolate Truffles.html
+++ b/Chocolate Truffles.html
@@ -421,13 +421,13 @@
         
         <div id="sidebar" class="menubar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
-            <a href="file:///D:/4TH%20YEAR/Web%20Application%20Development-Emina%20Faji%C4%87/Project1/About.html">About</a>
+            <a href="/../project1/About.html">About</a>
             <a href="#">All Recipes</a>
-            <a href="#">Soups</a>
-            <a href="#">Pies and Pastries</a>
+            <a href="/../project1/Soups.html">Soups</a>
+            <a href="/../project1/Pies and Pastries.html">Pies and Pastries</a>
             <a href="#">Main Dishes</a>
             <a href="#">Salads and side dishes</a>
-            <a href="#">Desserts</a>
+            <a href="/../project1/Desserts.html">Desserts</a>
             <a href="#">Drinks</a>
             <a href="#">Contact</a>
         </div>
