--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
         
         <div id="sidebar" class="menubar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
-            <a href="../Project1/About.html">About</a>
-            <a href="../Project1/Soups.html">Soups</a>
+            <a href="About.html">About</a>
+            <a href="Soups.html">Soups</a>
             <a href="../Project1/Pies%20and%20Pastries.html">Pies and Pastries</a>
             <a href="../Project1/SaladsAndSideDishes.html">Salads and side dishes</a>
             <a href="../Project1/Desserts.html">Desserts</a>
