--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
         
         <div id="sidebar" class="menubar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
-            <a href="../project1/About.html">About</a>
-            <a href="../project1/Soups.html">Soups</a>
+            <a href="../About.html">About</a>
+            <a href="../Soups.html">Soups</a>
             <a href="../project1/Pies%20and%20Pastries.html">Pies and Pastries</a>
             <a href="../project1/SaladsAndSideDishes.html">Salads and side dishes</a>
             <a href="../project1/Desserts.html">Desserts</a>
