--- a/index.html
+++ b/index.html
@@ -537,13 +537,13 @@
         
         <div id="sidebar" class="menubar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
-            <a href="../project1/About.html">About</a>
-            <a href="../project1/Soups.html">Soups</a>
-            <a href="../project1/Pies%20and%20Pastries.html">Pies and Pastries</a>
-            <a href="../project1/SaladsAndSideDishes.html">Salads and side dishes</a>
-            <a href="../project1/Desserts.html">Desserts</a>
-            <a href="../project1/Drinks.html">Drinks</a>
-            <a href="../project1/Contact.html">Contact</a>
+            <a href="About.html">About</a>
+            <a href="Soups.html">Soups</a>
+            <a href="Pies%20and%20Pastries.html">Pies and Pastries</a>
+            <a href="SaladsAndSideDishes.html">Salads and side dishes</a>
+            <a href="Desserts.html">Desserts</a>
+            <a href="Drinks.html">Drinks</a>
+            <a href="Contact.html">Contact</a>
         </div>
     </div>
     
