--- a/About.html
+++ b/About.html
@@ -389,13 +389,13 @@
         
         <div id="sidebar" class="menubar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
-            <a href="../Project1/About.html">About</a>
-            <a href="../Project1/Soups.html">Soups</a>
-            <a href="../Project1/Pies%20and%20Pastries.html">Pies and Pastries</a>
-            <a href="../Project1/SaladsAndSideDishes.html">Salads and side dishes</a>
-            <a href="../Project1/Desserts.html">Desserts</a>
-            <a href="../Project1/Drinks.html">Drinks</a>
-            <a href="../Project1/Contact.html">Contact</a>
+            <a href="About.html">About</a>
+            <a href="Soups.html">Soups</a>
+            <a href="Pies%20and%20Pastries.html">Pies and Pastries</a>
+            <a href="SaladsAndSideDishes.html">Salads and side dishes</a>
+            <a href="Desserts.html">Desserts</a>
+            <a href="Drinks.html">Drinks</a>
+            <a href="Contact.html">Contact</a>
         </div>
         
     </div>
